--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,7 @@ minify:
   minifyOutput: true
 
 params:
+  paperModCredit: false
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: Joel Peckham
   description: "Joel Peckham's Software Portfolio & Personal Website"
@@ -49,24 +50,9 @@ params:
     safari_pinned_tab: "favicon/safari-pinned-tab.svg"
 
   label:
-    text: "Home"
-    icon: favicon/apple-touch-icon.png
-    iconHeight: 35
-
-  # profile-mode
-  profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
-    buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+    text: "Joel Peckham"
+    # icon: favicon/apple-touch-icon.png
+    # iconHeight: 35
 
   # home-info mode
   homeInfoParams:
